crud-app/overlay/prod/crud-app-replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-app
spec:
  replicas: 10
