crud-app/overlay/prod/crud-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: crud-ingress
spec:
  rules:
  - host: "crud-prod.apps.dmi3lab.ru"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: crud-app
            port:
              number: 8080
  tls:
  - hosts:
    - crud-prod.apps.dmi3lab.ru
    secretName: crud-prod-ingress-cert-secret
